# ChangeLog for net-print/cups
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.498 2012/07/27 17:54:03 dilfridge Exp $

*cups-1.6.0 (27 Jul 2012)

  27 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org> -cups-1.6_rc1.ebuild,
  +cups-1.6.0.ebuild, cups-9999.ebuild:
  Version bump

  23 Jul 2012; <swift@gentoo.org> cups-1.4.8-r1.ebuild, cups-1.5.2-r4.ebuild,
  cups-1.5.3.ebuild, cups-1.6_rc1.ebuild, cups-9999.ebuild:
  Adding optional dependency on SELinux policy for CUPS

  19 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -cups-1.4.8-r23.ebuild:
  Remove old

  30 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.6_rc1.ebuild,
  cups-9999.ebuild:
  Correct language list

*cups-1.6_rc1 (30 Jun 2012)

  30 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -cups-1.6_beta1-r1.ebuild, +cups-1.6_rc1.ebuild:
  Version bump

  26 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r4.ebuild,
  cups-1.5.3.ebuild:
  Fix perl dependency, thanks _AxS_

  14 Jun 2012; Naohiro Aota <naota@gentoo.org> cups-1.5.3.ebuild:
  Add ~x86-fbsd. #401067

*cups-1.6_beta1-r1 (09 Jun 2012)

  09 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -cups-1.6_beta1.ebuild, +cups-1.6_beta1-r1.ebuild, cups-9999.ebuild:
  Remove banners and testprint, now provided by cups-filters

  07 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -cups-1.5.2-r21.ebuild, cups-1.5.3.ebuild, cups-1.6_beta1.ebuild,
  cups-9999.ebuild:
  Fix bashism in install-sh, bug 419735

  05 Jun 2012; Anthony G. Basile <blueness@gentoo.org> cups-1.5.3.ebuild:
  Keyword ~mips, bug #401067

  02 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.6_beta1.ebuild,
  cups-9999.ebuild:
  Add cups-filters as PDEPEND

*cups-1.5.3 (02 Jun 2012)

  02 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org> +cups-1.5.3.ebuild,
  +files/cups-1.5.3-fix-install-perms.patch, cups-9999.ebuild:
  Version bump
