@@ -32,24 +32,14 @@ DIST cups-1.6.0-source.tar.bz2 8219736 SHA256 9a30b141e3a11e558753a729d9766f487d
 EBUILD cups-1.4.8-r1.ebuild 7288 SHA256 2223e6dfbb12a647bdaab7d521fabe21d0b6c24838dd3cc46cd70f17a0c5ab42 SHA512 44855b10eeb588a69bcfe57980a13a83a49ed5e4d9aea8338e1a395f8ff47a0542d7550a3eda9e5cf4266af12d398d1e3d458af0ea11ffeea52459c32d704feb WHIRLPOOL 18b4c7529e599f29160d2eacaecb550eb8f3e208ba7f3691f5e1ead6e1837bbfae0e24e629a737a6a58832480b15d3dcbdb9dbdcfb8a68305e8f1170210bef6d
 EBUILD cups-1.5.2-r4.ebuild 8400 SHA256 eddf72820de09e9308963ef1b3ba8a9724ec57af7b171a86d551b458dc5c2589 SHA512 b0ae23c2b9fa2c489eff5079ab8ad9476c3102efd0d3d55f12f8ffd6e6aa2bc992c56f91427f80b64d78062c6b22d4cfd7979bd7b609e88881ade67501b94247 WHIRLPOOL f8704cc547ea38479f6f410bf791ad734387b85feac17631c5be0c49a2f64104dd2cee0ed85933b05099c372dd35f724c424d261036737209fce8f62a4e404c9
 EBUILD cups-1.5.3.ebuild 8654 SHA256 58f14d94f76fa4f2fcd47b28d9d1083928d167a0d5815babc87ee33e8f49715b SHA512 c276407c3efb136181b5b2d94ec408a9a199962b8915eedc1b31672daebcabcc129c7132757317ecb596a5d87d88fd69daa5bbc40c52a1ee97d709f072a38c42 WHIRLPOOL e9ac205f7966c09a63f339a2e140a1b57fcdd43e4c7d5156e8cfc4b87c84be4e7f186d404966e95fce7318441bcb5067e0028890f023964ee2fc6fae0879d85d
-EBUILD cups-1.6.0.ebuild 7840 SHA256 83d86ae5bd510e7172da6ef91e0b47f741a03297da14c211cec51a9dd649fea3 SHA512 3abdee26095615cd3db8e49c978f41caeb25f3567480347b9b8da5dcdb172ee3b37b76337b806d990c1ebc3fe7df0e384bbb31d88063e5f43a04bd76e927a0c1 WHIRLPOOL 8047a199ece877fde7a40fb6daa9114b918c79bfe8f457a88c7d1ffa524b89329e363e9c7f2854ec09da68bb68a9fbfe07188af1768c6f8b0c9764cd68121205
-EBUILD cups-9999.ebuild 7840 SHA256 6c3e797a4e3649729f07d3e4740301624cb06863bc86bacf1f0cc2e1b677a37e SHA512 3ad833edace7b31e329f9f6efda35d22419cb44073a95c752d07063f4cea5520fa357b5e54eff29cade82ee5dc4701871d4d96589e80ec55ab9fb802d488ac3f WHIRLPOOL b96d9fd8aa9f5e33ccbc7e8dbb2d8f347d2f9d664b1c706cce240536a0cccb0876f3a3d36bc03bf6dcbaad40c013ff830b6e2171d3020ef23922d739d0d9d828
-MISC ChangeLog 75843 SHA256 e80e6775dcad6c322a0b76da5d184d01b404202aa0cc11ef6e7f916a2bc28c6e SHA512 a10c9abcfb7cd85035c39fc89be757a93ce5c32382568f8f01c30cb931a8cda22f0498d9193e4b3fa1b87ea29326d720be2c41caef8c8de240a2fd0324e2bbaf WHIRLPOOL a3b366fc421245c8a977ef03ea1e6cab92251189009abeb64dbe81206a78fe423c1923ba186995f48cb41724bfda285886abf3efeb9d51f54a9c02be1c66572d
+EBUILD cups-1.6.0.ebuild 7845 SHA256 d811863c14f0178e93ad4641adf1fc4cd325d7591a1da96a8b55be9a12023d44 SHA512 572bfac360e2a762b31062a6c41d5cc936e76c71ee37d3593803a0e742cd4d49704ca5ddee41784f39baa7843dc315a3f6e6405df01d59546a64b3b534b1b773 WHIRLPOOL 4a385c029cb4b18b2217fe7e595e19875f8ba419a2660c3382c83fc0dcf7a32d21265bc9ef8f45f8b45c610b60739c52899357a5ebc0e685413dab720f2a40f2
+EBUILD cups-9999.ebuild 7845 SHA256 8437950e59c8d5e18e26692b00638722cb5c50ce9d10cd39a70df5c090cfddff SHA512 ad60800164205574d18db9fdedd92ad21059b91d3186d54694c7e374373bdd22fa35ce17ea299c5cf80e7c9448ef5b66c50fb38f6091ddcfeae78c3a0cea1461 WHIRLPOOL f732d8a6535fbcc0ce085535b474a70bd78fb163fa4b62a22cb989ae3fa7e804fafef18a9b606700eb83c98ea0c77e90eccde1e7497f6311b407188b99173f4c
+MISC ChangeLog 75966 SHA256 c836d66968528daf71b3a5d263d83ca005c3844574b6fb7fff40b1d000ac48d3 SHA512 a35eaf79a9c97f8ccc0dede25057109339765b99f460cab9dec78ec8ebbc43376433371c2ee06c8c84569cf763a894ee86c3d4ed48674e1467ae9de0c90bfe0b WHIRLPOOL f2a6b4b8c018d434e8cae3ea5f268e9d45a535aabc93a72ec60fcd5fc559a7027f305adc7250ca47e4495a0a27b98f3a3803a8e27d94562a8cade72f34971e34
 MISC metadata.xml 778 SHA256 26a8d1221a4334579f98705c38f3e3a882c223df86181dcf7968eac2118188b8 SHA512 717b6c3d940b2de149a68bb1c66175cd6fac04e21fcf581d6f1dd248c1bc5ee8fb98ec26a1fa2fca94e8fcb33f131c6635d40a6954721020a989dc260e8b8fbc WHIRLPOOL 057426e3c3f1e7e5a6bb124e0af0d804e15f6bbf17f7b278ef90d773f997beed6c6376bcc9603ac4c67f75675a33bc1fb7a02bb89f7a1ed69634a5d7bf9befbb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQEtYcAAoJEEb+UGWnxTyHYMQP/1VxrmckxpHzzuFHJt95ngFD
-Ub/N/P5u0KGpKaPjteMs79VTD3bzJY+NFcqTY3lF9WEVISrBQhLzksPkkuRvwrk/
-HfeidAhhYMd5H/u7peZnEscNhbZn7Yf85VZewefN3Y9FGjy/rp9hykxRZvy/QsP2
-PQ1NHJ8fvIl2HSMiRAsX+mVqkwUKo4eAS1vgXvI4PjHkWGuF6owZpH/ach0DvNmj
-xR9gOcfgAA42yMBKLyF3XmZGmRzhCcm0OLORHQXTsyj6JnXogrOpZcm/Xmt+uqJI
-1mxWaLb5DUHJeQHA6swH2E8nENXAKbbE8g+cp6WLXukYwT/ksc8aVRvjYQbhTzfz
-0KSxuThdoub1D1uQXsWT4a69J4xqjXc/tnN+z8YRAtRareFS7lDyAReTzLrpVQJu
-Fs7Ie2RWxj84US/elaieCbx9aggr3gtx3/bdgYnTe29zJMaJ17mx6ufxehUvv8G7
-jXCh2hpli+J9lw+/El2lX1g7cdo/vLKI++AP4Z4yquztDDENb3lsxpp5qNDEug98
-5Vimb0oi7zcqoPovg8XLVA8TJ9/vd7V/77jY08YE3Yya8rssXL+ArAGeFWZ2BoKJ
-btDI8WbeeEvQygxJSSvikdPIW1iUkA01Uhs08SL5B7sVTVFYNO6xTlJ/JhDds1Kp
-2UW9NFe0f/VpYkaeGDyO
-=bEDC
+iEYEAREIAAYFAlAUBpMACgkQl5yvQNBFVTVvNwCdFmwZAh5PYikC1F33CTbhd03r
+GzAAnApkSr/ZElIBvICeWwlDhLsaGwif
+=GMr6
 -----END PGP SIGNATURE-----
