@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.498 2012/07/27 17:54:03 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.499 2012/07/28 15:34:31 blueness Exp $
+
+  28 Jul 2012; Anthony G. Basile <blueness@gentoo.org> cups-1.6.0.ebuild,
+  cups-9999.ebuild:
+  Keyword ~mips, bug #428356
 
 *cups-1.6.0 (27 Jul 2012)
 
